--- a/color/default.css
+++ b/color/default.css
@@ -1,74 +1,74 @@
 a:hover,
 a:focus {
-    color: #3dc9b3;
+    color: #9966CC;
 }
 
 #navigation {
-	border-top: 5px solid #3dc9b3;
+	border-top: 5px solid #9966CC;
 }
 
 a,.tp-caption a.btn:hover {
-	color: #3dc9b3;
+	color: #9966CC;
 }
 .top-nav-collapse {
-	background: #3dc9b3;
+	background: #9966CC;
 }
 
 .carousel-indicators .active {
-    background-color: #3dc9b3;
+    background-color: #9966CC;
 }
 
 .header-text h2 span {
-    background-color: #3dc9b3;
+    background-color: #9966CC;
 }
 
 
 .navbar-custom ul.nav ul.dropdown-menu li a:hover {
-	color: #3dc9b3;
+	color: #9966CC;
 }
 
 .owl-theme .owl-controls .owl-page.active span,
 .owl-theme .owl-controls.clickable .owl-page:hover span {
-    background-color: #3dc9b3;
+    background-color: #9966CC;
 }
 
 .widget-avatar .avatar:hover {
-    border: 5px solid #3dc9b3;
+    border: 5px solid #9966CC;
 }
 
 .bg-skin {
-	background: #3dc9b3;
+	background: #9966CC;
 }
 
 .highlight-color {
-	background-color: #3dc9b3;
+	background-color: #9966CC;
 }
 
 .service-box:hover {
-	border-bottom: 2px solid #3dc9b3;
+	border-bottom: 2px solid #9966CC;
 }
 
 
 
 form#contact-form input:focus,form#contact-form select:focus,form#contact-form textarea:focus {
-	border-color: #3dc9b3;
+	border-color: #9966CC;
 }
 form.search-form input:focus {
-	border-color: #3dc9b3;
+	border-color: #9966CC;
 }
 
 /* footer */
 ul.footer-menu li a:hover {
-	color: #3dc9b3;
+	color: #9966CC;
 }
 
 footer a.totop:hover {
-	color: #3dc9b3;
+	color: #9966CC;
 }
 
 
 .btn-skin {
   color: #fff;
-  background-color: #3dc9b3;
-  border-color: #3dc9b3;
+  background-color: #9966CC;
+  border-color: #9966CC;
 }
